--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body id="pageTop">
   <!-- Start Menu -->
 
-  <nav id="mainNav" class="navbar navbar-expand-md navbar-trans fixed-top">
+  <!-- <nav id="mainNav" class="navbar navbar-expand-md navbar-trans fixed-top">
     <div class="container">
       <div class="navbar-header ml-auto">
         <a class="navbar-brand js-scroll" href="#pageTop"><img src="img/logo.png" alt="" srcset=""></a>
@@ -133,6 +133,37 @@
         </ul>
       </div>
     </div>
+  </nav> -->
+  <nav id="mainNav" class="navbar navbar-expand-md navbar-trans fixed-top">
+
+    <!--  Show this only on mobile to medium screens  -->
+    <a class="navbar-brand d-lg-none" href="#"><img src="img/logo.png" alt=""></a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+    <!--  Use flexbox utility classes to change how the child elements are justified  -->
+    <div class="collapse navbar-collapse justify-content-between" id="navbarToggle">
+
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link js-scroll active" href="#pageTop">Home</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#about">About Us</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#service">Service</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#project">Project</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#testimonial">Testimonial</a></li>
+      </ul>
+      <!--   Show this only lg screens and up   -->
+      <a class="navbar-brand d-none d-lg-block center-logo" href="#"><img src="img/logo.png" alt=""></a>
+      <ul class="nav navbar-nav mr-auto">
+        <li class="nav-item"><a class="nav-link js-scroll" href="#gallery">Gallery</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#blog">Blog</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#clients">Clients</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#team">Team</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll" href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </nav>
   <!-- End Menu -->
   <!-- carousel Slider -->
@@ -149,28 +180,28 @@
             <div class="carousel-item active">
               <img class="d-block w-100 img-fluid" src="img/slider/slide-2.jpg" alt="First slide">
               <div class="container">
+                <div class="top-caption text-center">a Kalyan Sangstha<br>Bangladesh</div>
                 <div class="carousel-caption d-md-block">
-                  <h2 data-animation="animated slideInDown">First slide label</h2>
-                  <p data-animation="animated slideInUp">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Laboriosam quisquam, recusandae culpa eum iure nulla?</p>
+                  <h2 data-animation="animated slideInDown">Mongla Cement Factory a Business Unit of SKS</h2>
+
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100 img-fluid" src="img/slider/slide-1.jpg" alt="Second slide">
               <div class="container">
+                  <div class="top-caption text-center">a Kalyan Sangstha<br>Bangladesh</div>
                 <div class="carousel-caption d-md-block">
-                  <h2 data-animation="animated slideInDown">First slide label</h2>
-                  <p data-animation="animated slideInUp">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                  <h2 data-animation="animated slideInDown">Mongla Cement Factory a Business Unit of SKS</h2>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100 img-fluid" src="img/slider/slide-2.jpg" alt="Third slide">
               <div class="container">
+                  <div class="top-caption text-center">a Kalyan Sangstha<br>Bangladesh</div>
                 <div class="carousel-caption d-md-block">
-                  <h2 data-animation="animated slideInDown">First slide label</h2>
-                  <p data-animation="animated slideInUp">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                  <h2 data-animation="animated slideInDown">Mongla Cement Factory a Business Unit of SKS</h2>
                 </div>
               </div>
             </div>
@@ -181,43 +212,6 @@
     </div>
   </section>
   <!-- End Slider -->
-  <!-- Start About -->
-  <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <header class="section-header text-center">
-            <h2>About us</h2>
-            <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.
-            </p>
-          </header>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, omnis ab! Distinctio provident tempore
-              deleniti. Eveniet quisquam quas vitae quibusdam quia, placeat ex corrupti sequi et perferendis neque iusto
-              delectus pariatur consectetur deserunt nobis cupiditate sint ullam! Iusto dolorum maiores quas fugit.
-              Repellendus asperiores cupiditate ratione quo, illum reprehenderit labore odio molestias mollitia
-              excepturi repellat dolorem magnam corrupti iste repudiandae vitae! Eveniet architecto reiciendis explicabo
-              inventore excepturi nisi quod. Quisquam ex magnam magni odio eos delectus reiciendis quae consectetur
-              nihil. Necessitatibus voluptatum sit culpa corporis reprehenderit iusto pariatur iste rerum? Blanditiis
-              aspernatur distinctio dignissimos laboriosam repellendus. Molestias repudiandae, quibusdam nulla labore
-              minus illo exercitationem tempora et tenetur facilis odit amet illum, repellendus eos ea? Id, dolore
-              nesciunt tempore quo blanditiis suscipit ipsam eos quam harum tempora eum ullam, ex labore quisquam saepe
-              atque eveniet similique. Et ratione quae alias itaque!</p>
-          </div>
-        </div>
-        <!--End Col-->
-        <div class="col-md-6">
-          <img class="img-fluid" src="img/about-us.jpg" alt="About Us">
-        </div>
-
-      </div>
-    </div>
-  </section>
-  <!-- End Service -->
   <!-- Start Service -->
   <section id="video">
     <div class="container-fluid pl-0 pr-0">
