--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="carousel-item active">
               <img class="d-block w-100 img-fluid" src="img/slider/slide-2.jpg" alt="First slide">
               <div class="container">
-                <div class="top-caption text-center">a Kalyan Sangstha<br>Bangladesh</div>
+                <div class="top-caption text-center">Sena Kalyan Sangstha<br>Bangladesh</div>
                 <div class="carousel-caption d-md-block">
                   <h2 data-animation="animated slideInDown">Mongla Cement Factory a Business Unit of SKS</h2>
 
@@ -190,7 +190,7 @@
             <div class="carousel-item">
               <img class="d-block w-100 img-fluid" src="img/slider/slide-1.jpg" alt="Second slide">
               <div class="container">
-                  <div class="top-caption text-center">a Kalyan Sangstha<br>Bangladesh</div>
+                  <div class="top-caption text-center">sena Kalyan Sangstha<br>Bangladesh</div>
                 <div class="carousel-caption d-md-block">
                   <h2 data-animation="animated slideInDown">Mongla Cement Factory a Business Unit of SKS</h2>
                 </div>
@@ -199,7 +199,7 @@
             <div class="carousel-item">
               <img class="d-block w-100 img-fluid" src="img/slider/slide-2.jpg" alt="Third slide">
               <div class="container">
-                  <div class="top-caption text-center">a Kalyan Sangstha<br>Bangladesh</div>
+                  <div class="top-caption text-center">sena Kalyan Sangstha<br>Bangladesh</div>
                 <div class="carousel-caption d-md-block">
                   <h2 data-animation="animated slideInDown">Mongla Cement Factory a Business Unit of SKS</h2>
                 </div>
